make table responsive on small screens

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -6,10 +6,10 @@
 
 <div class="container">
   {% if user.profile.coins_selected and user.profile.risk_assessment_complete %}
-    <div class="row py-5">
+    <div class="row py-5 text-center">
       <div class="col">
-        <h2 class="text-center">Your Portfolio</h2>
-        <table class="table table-responsive">
+        <h2>Your Portfolio</h2>
+        <table class="table table-responsive-sm">
           <thead>
             <tr>
               <th scope="row">Coins</th>
