--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -9,28 +9,30 @@
     <div class="row py-5 text-center">
       <div class="col">
         <h2>Your Portfolio</h2>
-        <table class="table table-responsive-sm">
-          <thead>
-            <tr>
-              <th scope="row">Coins</th>
-              {% for coin in selected_coins %}
-              <th scope="row" class="text-center" data-toggle="tooltip" data-placement="top" title="{{coin.name}}">
-                {% with 'account/img/coins/'|add:coin.filename as image_url %}
-                  <img src="{% static image_url %}" width="25">
-                {% endwith %}
-              </th>
-              {% endfor %}
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">Percent</th>
-              {% for coin in selected_coins %}
-                <td class="text-center">{{coin.percent}}</td>
-              {% endfor %}
-            </tr>
-          </tbody>
-        </table>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="row">Coins</th>
+                {% for coin in selected_coins %}
+                <th scope="row" class="text-center" data-toggle="tooltip" data-placement="top" title="{{coin.name}}">
+                  {% with 'account/img/coins/'|add:coin.filename as image_url %}
+                    <img src="{% static image_url %}" width="25">
+                  {% endwith %}
+                </th>
+                {% endfor %}
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Percent</th>
+                {% for coin in selected_coins %}
+                  <td class="text-center">{{coin.percent}}</td>
+                {% endfor %}
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
     <div class="row py-2">
