--- a/client/static/css/toolkit-inverse.css
+++ b/client/static/css/toolkit-inverse.css
@@ -1323,7 +1323,7 @@ pre {
   padding: 0.5rem 0.75rem;
   font-size: 0.9rem;
   line-height: 1.25;
-  color: #fff;
+  color: #333;
   background-image: none;
   background-clip: padding-box;
   border-radius: 0.25rem;
