--- a/server/account/templates/registration/account_activation_email.html
+++ b/server/account/templates/registration/account_activation_email.html
@@ -180,7 +180,7 @@
       <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 600px;">
         <tr>
           <td style="padding: 20px 0; text-align: center">
-            <img src="{{ image_url }}{% static 'polyledger/img/logo-dark.png' %}" width="200" height="50" alt="Polyledger" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+            <img src="http://{{ current_site }}{% static 'polyledger/img/logo-dark.png' %}" width="200" height="50" alt="Polyledger" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
           </td>
         </tr>
       </table>
@@ -192,7 +192,7 @@
         <!-- Hero Image, Flush : BEGIN -->
         <tr>
           <td bgcolor="#ffffff" align="center">
-            <img src="{{ image_url }}{% static 'account/img/email_header.jpg' %}" width="600" height="" alt="header" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; margin: auto;" class="g-img">
+            <img src="http://{{ current_site }}{% static 'account/img/email_header.jpg' %}" width="600" height="" alt="header" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; margin: auto;" class="g-img">
           </td>
         </tr>
         <!-- Hero Image, Flush : END -->
@@ -214,7 +214,7 @@
                   <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto;">
                     <tr>
                       <td style="border-radius: 3px; background: #222222; text-align: center;" class="button-td">
-                        <a href="http://{{ site_url }}{% url 'account:activate' uidb64=uid token=token %}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
+                        <a href="http://{{ current_site }}{% url 'account:activate' uidb64=uid token=token %}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
                           <span style="color:#ffffff;" class="button-link">&nbsp;&nbsp;&nbsp;&nbsp;Confirm&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </a>
                       </td>
