--- a/server/api/templates/account_activation_email.html
+++ b/server/api/templates/account_activation_email.html
@@ -214,7 +214,7 @@
                   <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto;">
                     <tr>
                       <td style="border-radius: 3px; background: #222222; text-align: center;" class="button-td">
-                        <a href="http://{{ site_url }}{% url 'account:activate' uidb64=uid token=token %}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
+                        <a href="http://{{ site_url }}/api/users/{{uid}}/activate/?token={{token}}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
                           <span style="color:#ffffff;" class="button-link">&nbsp;&nbsp;&nbsp;&nbsp;Confirm&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </a>
                       </td>
