--- a/server/api/templates/account_activation_email.html
+++ b/server/api/templates/account_activation_email.html
@@ -180,7 +180,7 @@
       <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 600px;">
         <tr>
           <td style="padding: 20px 0; text-align: center">
-            <img src="{{ image_url }}{% static 'polyledger/img/logo-dark.png' %}" width="200" height="50" alt="Polyledger" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+            <img src="{{ site_url }}{% static 'polyledger/img/logo-dark.png' %}" width="200" height="50" alt="Polyledger" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
           </td>
         </tr>
       </table>
@@ -192,7 +192,7 @@
         <!-- Hero Image, Flush : BEGIN -->
         <tr>
           <td bgcolor="#ffffff" align="center">
-            <img src="{{ image_url }}{% static 'account/img/email_header.jpg' %}" width="600" height="" alt="header" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; margin: auto;" class="g-img">
+            <img src="{{ site_url }}{% static 'polyledger/img/email_header.jpg' %}" width="600" height="" alt="header" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; margin: auto;" class="g-img">
           </td>
         </tr>
         <!-- Hero Image, Flush : END -->
