Add logo to admin dashboard

--- a/server/templates/admin/base_site.html
+++ b/server/templates/admin/base_site.html
@@ -1,9 +1,14 @@
 {% extends "admin/base.html" %}
+{% load static %}
 
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Polyledger Administration</a></h1>
+<h1 id="site-name">
+  <a href="{% url 'admin:index' %}">
+    <img src="{% static 'polyledger/img/logo.png' %}" height="50" style="margin-top: -5px;">
+  </a>
+</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
