Update email content and remove email hero image

--- a/server/api/templates/account_activation_email.html
+++ b/server/api/templates/account_activation_email.html
@@ -190,11 +190,11 @@
       <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 600px;">
 
         <!-- Hero Image, Flush : BEGIN -->
-        <tr>
+        <!-- <tr>
           <td bgcolor="#ffffff" align="center">
             <img src="{{ site_url }}{% static 'polyledger/img/email_header.jpg' %}" width="600" height="" alt="header" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; margin: auto;" class="g-img">
           </td>
-        </tr>
+        </tr> -->
         <!-- Hero Image, Flush : END -->
 
         <!-- 1 Column Text + Button : BEGIN -->
@@ -225,8 +225,8 @@
               </tr>
               <tr>
                 <td style="padding: 40px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
-                  <h2 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 18px; line-height: 21px; color: #333333; font-weight: bold;">The future of investing is here.</h2>
-                  <p style="margin: 0;">At Polyledger, we believe in the potential of cryptocurrencies. We're powered by a revolutionary data analytics platform that provides cutting-edge insights into the market environment. As a client, we'll work together to meet your investment goals while paving the way for a decentralized future.</p>
+                  <h2 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 18px; line-height: 21px; color: #333333; font-weight: bold;">Digital currency portfolios made simple.</h2>
+                  <p style="margin: 0;">At Polyledger, we believe in the potential of digital currency. We're building a revolutionary digital portfolio management platform that enables better investment decisions. As a member, we will work to meet your investment goals while paving the way for a decentralized future.</p>
                 </td>
               </tr>
               {% endautoescape %}
@@ -243,7 +243,7 @@
         <tr>
           <td style="padding: 40px 10px;width: 100%;font-size: 12px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;" class="x-gmail-data-detectors">
             <br><br>
-            Polyledger<br>
+            Polyledger Inc.<br>
             325 Channing Ave #117<br>
             Palo Alto, CA, 94301 USA
           </td>
@@ -259,7 +259,7 @@
     </div>
 
     <!-- Full Bleed Background Section : BEGIN -->
-    <table role="presentation" bgcolor="#3A539B" cellspacing="0" cellpadding="0" border="0" align="center" width="100%">
+    <table role="presentation" bgcolor="#2d3436" cellspacing="0" cellpadding="0" border="0" align="center" width="100%">
       <tr>
         <td valign="top" align="center">
           <div style="max-width: 600px; margin: auto;" class="email-container">
@@ -271,7 +271,7 @@
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
               <tr>
                 <td style="padding: 40px; text-align: left; font-family: sans-serif; font-size: 12px; line-height: 20px; color: #ffffff;">
-                  <p style="margin: 0;">Full disclosure: Polyledger is <em>not</em> an SEC registered broker-dealer nor member FINRA/SIPC. Investments are not FDIC insured and may lose value. Investing involves risk and investments may lose value. Please consider your objectives and Polyledger pricing before investing. Past performance does not guarantee future results. Investment outcomes and projections are hypothetical in nature.</p>
+                  <p style="margin: 0;">Investing in cryptocurrencies involves huge risk, including the possible loss of money you invest, and past performance does not guarantee future performance. Historical returns, expected returns, and probability projections are provided for informational and illustrative purposes, and may not reflect actual future performance.</p>
                 </td>
               </tr>
             </table>
