Update main font

--- a/client/bootstrap/scss/variables.scss
+++ b/client/bootstrap/scss/variables.scss
@@ -52,8 +52,7 @@ $grid-gutter-width: $spacer;
 
 // Fonts
 $font-family-serif: "Lora", "Times New Roman", Times, serif !default;
-$font-family-sans-serif: "Work Sans", "Helvetica Neue", Helvetica, Arial,
-  sans-serif;
+$font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-base: $font-family-sans-serif;
 
 // Body
