Login and signup form validation

--- a/client/bootstrap/scss/index.scss
+++ b/client/bootstrap/scss/index.scss
@@ -2,8 +2,7 @@
  * Polyledger Bootstrap Theme
  */
 
-@import "./variables-inverse.scss";
-@import "./components.scss";
+@import './inverse.scss';
 
 //
 // Custom form overrides
